# observable

./: .gitignore  Cargo.toml
mutable/src/: default_impl.rs  lib.rs
mutable_derive/: Cargo.toml
mutable_derive/src/: derive_mutable.rs  lib.rs
mutable_test/: Cargo.toml
mutable_test/src/: lib.rs
observable/src/: default_impl.rs  lib.rs
observable_derive/: Cargo.toml
observable_derive/src/: derive_observable.rs  derive_softeq.rs  lib.rs
observable_test/: Cargo.toml
observable_test/src/: lib.rs  main.rs
