
[package]
name = "mutable_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
mutable = {version="0.1.0", path= "../mutable" }
mutable_derive = {version="0.1.0", path= "../mutable_derive" }

[dependencies]
mutable = {version="0.1.0", path= "../mutable" }
mutable_derive = {version="0.1.0", path= "../mutable_derive" }