[package]
name = "observable_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.21"
proc-macro2 = "1.0.43"
syn = {version="1.0.99",features=["full"]}
proc-macro-error = "1.0.4"
convert_case = "0.5.0"