[package]
name = "observable_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
observable = {version="0.1.0", path="../observable"}
observable_derive = {version="0.1.0", path="../observable_derive"}

[dependencies]
observable = {version="0.1.0", path="../observable"}
observable_derive = {version="0.1.0", path="../observable_derive"}